# biddesk-autopilot

./: .gitignore  README.md  pyproject.toml
docs/: index.html
reports/: sample-proposal-packet.json  sample-proposal-packet.md
scripts/: prepare-qwen-submission-handoff.sh  submission-readiness.sh  write-qwen-judge-clean-room-rehearsal.py  write-qwen-source-recheck-snapshot.py
submission/: qwen-alibaba-function-compute-proof-adapter.md  qwen-architecture-diagram.md  qwen-d5-public-submission-rehearsal.md  qwen-deadline-extension-arbitration.md  qwen-deadline-extension-confirmation.md  qwen-demo-script.md  qwen-demo-video-preupload.md  qwen-deployment-proof-gate.md  qwen-devpost-field-lock.md  qwen-external-handoff-checklist.md  qwen-external-proof-packet.md  qwen-final-120-hour-evidence-freeze.md  qwen-final-36-hour-eligibility-brief.md  qwen-final-39-hour-submission-lock.md  qwen-final-45-hour-devpost-handoff.md  qwen-final-48-hour-public-proof-lock.md  qwen-final-60-hour-command-center.md  qwen-final-63-hour-submission-gate.md  qwen-final-84-hour-submit-slot.md  qwen-final-96-hour-judge-access-drill.md  qwen-final-captcha-bridge-paste-sheet.md  qwen-final-devpost-access-recheck.md  qwen-final-devpost-submit-runbook.md  qwen-final-external-blocker-matrix.md  qwen-final-operator-index.md  qwen-final-public-proof-evidence-lock.md  qwen-final-week-execution-sheet.md  qwen-judge-clean-room-rehearsal.md  qwen-judging-criteria-map.md  qwen-judging-testing-access-gate.md  qwen-presentation-deck.md  qwen-public-asset-ledger.md  qwen-public-pages-video-fallback.md  (+4 more)
(+57 files in other folders)
