[project]
name = "biddesk-autopilot"
version = "0.1.0"
description = "Qwen-ready multi-agent proposal operations prototype."
readme = "README.md"
authors = [
    { name = "memekr", email = "memekr@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
biddesk-autopilot = "biddesk_autopilot.cli:main"

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.17",
    "ty>=0.0.49",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["submission/qwen-handoff-bundle"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "COM812", "ISC001", "T201", "TC001", "TC003"]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["INP001"]
"tests/**/*.py" = ["PLR2004", "S101"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ty.environment]
python-version = "3.12"
